#11 Configuration of the Ontrack URL
Bumping Ontrack from 4.1.24 to 4.2.1

* [#951](https://github.com/nemerosa/ontrack/issues/951) [EXPERIMENTAL] Notifications & webhooks
* [#955](https://github.com/nemerosa/ontrack/issues/955) LDAP Casc settings enabled field is not correct
* [#956](https://github.com/nemerosa/ontrack/issues/956) Casc: support for indentation when expanding secrets in Casc files
* [#957](https://github.com/nemerosa/ontrack/issues/957) The migration of GitHub tokens must run BEFORE the CasC setup
* [#959](https://github.com/nemerosa/ontrack/issues/959) Casc: associating groups to role
* [#960](https://github.com/nemerosa/ontrack/issues/960) Upgrade to Spring Boot 2.6.7 & Kotlin 1.6.21
* [#961](https://github.com/nemerosa/ontrack/issues/961) Some GHA jobs cannot be ingested because of out-of-range integers
* [#962](https://github.com/nemerosa/ontrack/issues/962) GitHub ingestion - tags must not be ingested
* [#963](https://github.com/nemerosa/ontrack/issues/963) GitHub ingestion: tags are still processed
* [#964](https://github.com/nemerosa/ontrack/issues/964) GitHub ingestion: issue with some Author fields
* [#965](https://github.com/nemerosa/ontrack/issues/965) GitHub ingestion - scalability of the default ingestion queue
* [#967](https://github.com/nemerosa/ontrack/issues/967) [EXPERIMENTAL] GitHub ingestion: configuration of project & branch with properties

--- a/charts/ontrack/templates/deployment.yaml
+++ b/charts/ontrack/templates/deployment.yaml
@@ -61,6 +61,8 @@ spec:
             ########################################
             # General configuration
             ########################################
+            - name: ONTRACK_CONFIG_URL
+              value: {{ .Values.ontrack.url | quote }}
             - name: PROFILE
               value: {{ .Values.ontrack.profiles | quote }}
             ########################################
