--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -81,6 +81,9 @@ ontrack:
   url: "http://localhost:8080"
   # Comma-separated list of active Spring profiles
   profiles: prod
+  # Additional arguments to pass on the command line to the Ontrack application
+  # Uses the ONTRACK_ARGS environment variable of the Ontrack container
+  args: ""
   ## Adjust these values to your needs, but make sure that the memory limit is never under 4 GB
   resources:
     limits:
