--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -87,6 +87,8 @@ ontrack:
   # List of Spring Boot application properties
   # See https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.external-config.files
   config_locations: []
+  # Application configuration file as a YAML content
+  application_yaml: ""
   ## Adjust these values to your needs, but make sure that the memory limit is never under 4 GB
   resources:
     limits:
