--- a/charts/ontrack/templates/application.yaml
+++ b/charts/ontrack/templates/application.yaml
@@ -5,5 +5,5 @@ metadata:
   name: {{ include "ontrack.fullname" . }}-application
 data:
   application.yaml: |-
-    {{- toYaml .Values.ontrack.application_yaml | nindent 4 }}
+    {{ .Values.ontrack.application_yaml | indent 4 }}
 {{- end }}
