--- a/charts/ontrack/templates/application.yaml
+++ b/charts/ontrack/templates/application.yaml
@@ -4,6 +4,5 @@ kind: ConfigMap
 metadata:
   name: {{ include "ontrack.fullname" . }}-application
 data:
-  application.yaml: |-
-    {{ .Values.ontrack.application_yaml | indent 4 }}
+  application.yaml: |-{{ .Values.ontrack.application_yaml | nindent 4 }}
 {{- end }}
