--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,4 +30,5 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
+          skip_packaging: true
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
