--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
-          install_only: true
+          skip_packaging: "yes"
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
