--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           helm package charts/ontrack
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.5.0
+        uses: dcoraboeuf/chart-releaser-action@main
         env:
           skip_packaging: "yes"
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
