ci: targeting the CR directory

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Packaging
         run: |
-          helm package charts/ontrack
+          helm package charts/ontrack --destination .cr-release-packages
 
       - name: Run chart-releaser
         uses: dcoraboeuf/chart-releaser-action@main
