fix: Elasticsearch disruption budget not compatible with K8S 1.25

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -208,6 +208,7 @@ rabbitmq:
 # Local Elasticsearch engine for testing purpose
 elasticsearch:
   enabled: true
+  maxUnavailable: 0 # Even in K8S 1.25, the Pod Disruption budget is generated for policy/v1beta instead of policy/v1
   replicas: 1
   minimumMasterNodes: 1
   antiAffinity: soft
