nemerosa/ontrack#1129 Next UI service

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -95,6 +95,10 @@ ontrack:
     enabled: false
     # Image to use
     image: nemerosa/ontrack-ui
+    # Service
+    service:
+      # Port to expose
+      port: 3000
     # Next UI resources
     resources:
       limits:
