--- a/charts/ontrack/templates/ingress.yaml
+++ b/charts/ontrack/templates/ingress.yaml
@@ -1,6 +1,9 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "ontrack.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
+{{- $uiEnabled := .Values.ontrack.ui.enabled -}}
+{{- $uiPort := .Values.ontrack.ui.service.port -}}
+{{- $uiPath := .Values.ontrack.ui.service.path -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -27,14 +30,23 @@ spec:
     - host: {{ .host | quote }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType | default "Prefix" }}
+          # Next UI
+          {{- if $uiEnabled }}
+          - path: {{ $uiPath }}
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $fullName }}-ui
+                port:
+                  number: {{ $uiPort }}
+          {{- end }}
+          # Main Ontrack service (Backend + legacy UI)
+          - path: "/"
+            pathType: Prefix
             backend:
               service:
                 name: {{ $fullName }}
                 port:
                   number: {{ $svcPort }}
-          {{- end }}
     {{- end }}
   {{- end }}
