--- a/charts/ontrack/templates/ingress.yaml
+++ b/charts/ontrack/templates/ingress.yaml
@@ -10,8 +10,12 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "ontrack.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
   annotations:
+    {{- if $uiEnabled }}
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    {{- end }}
+  {{- with .Values.ingress.annotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
@@ -32,8 +36,8 @@ spec:
         paths:
           # Next UI
           {{- if $uiEnabled }}
-          - path: {{ $uiPath }}
-            pathType: Prefix
+          - path: {{ $uiPath }}(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{ $fullName }}-ui
