--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -56,6 +56,8 @@ management:
 
 ingress:
   enabled: false
+  annotations:
+
   #  annotations: {}
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
@@ -94,7 +96,7 @@ ontrack:
     # Enabling Next UI
     enabled: false
     # Number of replicas
-    replicas: 2
+    replicas: 1
     # Logging
     logging: false
     # Image to use
