--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -99,6 +99,8 @@ ontrack:
     replicas: 1
     # Logging
     logging: false
+    # Tracing
+    tracing: false
     # Image to use
     image: nemerosa/ontrack-ui
     # Service
