--- a/charts/ontrack/templates/service-ui.yaml
+++ b/charts/ontrack/templates/service-ui.yaml
@@ -5,7 +5,7 @@ kind: Service
 metadata:
   name: {{ include "ontrack.fullname" . }}-ui
   labels:
-    {{- include "ontrack.labels" . | nindent 4 }}
+    {{- include "ontrack.labels.ui" . | nindent 4 }}
   {{- with .Values.service.annotations }}
   annotations:
     {{- toYaml . | nindent 8 }}
@@ -18,5 +18,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "ontrack.selectorLabels" . | nindent 4 }}
+    {{- include "ontrack.selectorLabels.ui" . | nindent 4 }}
 {{- end }}
