--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -56,20 +56,10 @@ management:
 
 ingress:
   enabled: false
-  annotations:
-
-  #  annotations: {}
-  # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
-  #  hosts:
-  #    - host: chart-example.local
-  #      paths:
-  #        - path: /*
-  #          pathType: Prefix
-  #  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  annotations: {}
+  host: "ontrack.local"
+  tls:
+    enabled: true
 
 # nodeSelector: {}
 
